--- a/deno.json
+++ b/deno.json
@@ -20,6 +20,8 @@
 	"imports": {
 		"@/": "./src/",
 		"@panva/jose": "jsr:@panva/jose@^6.1.3",
-		"@std/http": "jsr:@std/http@^1.0.22"
+		"@std/expect": "jsr:@std/expect@^1.0.17",
+		"@std/http": "jsr:@std/http@^1.0.22",
+		"@std/testing": "jsr:@std/testing@^1.0.16"
 	}
 }
