--- a/deno.json
+++ b/deno.json
@@ -20,6 +20,7 @@
 	"imports": {
 		"@/": "./src/",
 		"@panva/jose": "jsr:@panva/jose@^6.1.3",
+		"@smujdev/ttl-store": "jsr:@smujdev/ttl-store@^0.1.1",
 		"@std/expect": "jsr:@std/expect@^1.0.17",
 		"@std/http": "jsr:@std/http@^1.0.22",
 		"@std/testing": "jsr:@std/testing@^1.0.16"
